--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 		<title>This Blog Is Now Partially Operational</title>
 	</head>
 	<body>
+		<p> #This Blog Is Now Partially Operational
 		
-	<p>
+
   eat shit ds9
   </p>
-		</footer>
+	
 	</body>
 </html>
