--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>This Blog Is Now Partially Operational</title>
-	</head>
+	<head lang="en">
+	<meta charset="UTF-8">
+		<title>Department-H</title>
 	<body>
-		<p> #This Blog Is Now Partially Operational
+		<h1>This Blog Is Now Partially Operational</h1>
 		
 
-  eat shit ds9
+  <p>eat shit ds9
   </p>
 	
 	</body>
